[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/buttons/right_button.png" type="Texture" id=1]
[ext_resource path="res://assets/tutorial/map/background_tutorial.png" type="Texture" id=2]
[ext_resource path="res://scripts/Drawer/Drawer.gd" type="Script" id=3]
[ext_resource path="res://scenes/base_phase/BossTable.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/slots/HSlotCollection.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/slots/SlotExpansor.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Drawer/drawer.png" type="Texture" id=7]
[ext_resource path="res://assets/Drawer/Tasks/task_teste.png" type="Texture" id=8]
[ext_resource path="res://assets/Fonts/joystix_monospace_font.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://scripts/tutorial/TaskIntroduction.gd" type="Script" id=10]
[ext_resource path="res://assets/items/task/detailed_task.png" type="Texture" id=11]
[ext_resource path="res://assets/items/task/small_task.png" type="Texture" id=12]
[ext_resource path="res://scenes/slots/Slot.tscn" type="PackedScene" id=13]
[ext_resource path="res://assets/Timer/relogioDigital.png" type="Texture" id=14]
[ext_resource path="res://assets/Clock/visible_clock.png" type="Texture" id=15]
[ext_resource path="res://assets/Clock/opaque_clock.png" type="Texture" id=16]
[ext_resource path="res://scenes/base_phase/TimeDisplayer.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/base_phase/TextureProgress.tscn" type="PackedScene" id=18]
[ext_resource path="res://assets/Timer/circulo.png" type="Texture" id=19]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.964706, 0.941176, 0.858824, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color( 1, 1, 1, 0.592157 )
shadow_size = 5
anti_aliasing = false

[sub_resource type="DynamicFont" id=3]
size = 23
font_data = ExtResource( 9 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.466667, 0.72549, 0.858824, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 7

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.466667, 0.72549, 0.858824, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )
shadow_color = Color( 1, 1, 1, 1 )
shadow_size = 7

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1027, 466, 0, 0, 0, 0, 189, 369 )
}

[sub_resource type="Curve2D" id=6]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 862, 656, 0, 0, 0, 0, 1036, 462 )
}

[sub_resource type="TileSet" id=7]
0/name = "Gaveta Copy Copy.png 0"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 96 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="main_scene_task" type="Node2D"]
script = ExtResource( 10 )

[node name="BackGround" type="Sprite" parent="."]
position = Vector2( 640, 360 )
scale = Vector2( 0.727273, 0.75 )
texture = ExtResource( 2 )

[node name="opac_back_ground" type="Panel" parent="."]
modulate = Color( 0, 0, 0, 0.784314 )
margin_right = 1284.0
margin_bottom = 720.0

[node name="text_box" type="Panel" parent="."]
margin_left = 88.0
margin_top = 424.0
margin_right = 672.0
margin_bottom = 692.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="text" type="RichTextLabel" parent="text_box"]
margin_left = 12.0
margin_top = 12.0
margin_right = 582.0
margin_bottom = 224.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true

[node name="next_button" type="TextureButton" parent="text_box"]
margin_left = 540.0
margin_top = 226.0
margin_right = 576.0
margin_bottom = 262.0
texture_normal = ExtResource( 1 )

[node name="back_button" type="TextureButton" parent="text_box"]
margin_left = 44.0
margin_top = 262.0
margin_right = 80.0
margin_bottom = 298.0
rect_rotation = 180.0
texture_normal = ExtResource( 1 )

[node name="BossTable" parent="." instance=ExtResource( 4 )]
position = Vector2( 768, 0 )

[node name="back_timer" type="Panel" parent="."]
margin_left = 1026.0
margin_top = 3.0
margin_right = 1162.0
margin_bottom = 75.0
custom_styles/panel = SubResource( 8 )

[node name="Timer" type="Sprite" parent="."]
position = Vector2( 1093, 39 )
texture = ExtResource( 14 )

[node name="TimeDisplayer" parent="." instance=ExtResource( 17 )]
margin_left = 1016.0
margin_top = 7.0
margin_right = 1135.0
margin_bottom = 70.0

[node name="back_task" type="Panel" parent="."]
margin_left = 144.0
margin_top = 328.0
margin_right = 224.0
margin_bottom = 408.0
custom_styles/panel = SubResource( 4 )

[node name="SlotExpansorKira" parent="." instance=ExtResource( 6 )]
margin_left = 104.0
margin_top = 264.0
margin_right = 349.0
margin_bottom = 409.0

[node name="SlotCollectionKira" parent="SlotExpansorKira" instance=ExtResource( 5 )]
margin_left = 3.0
margin_top = 70.0
margin_right = 131.0
margin_bottom = 110.0
rect_min_size = Vector2( 128, 40 )
custom_constants/separation = -128
collection_size = Vector2( 128, 40 )

[node name="WorkSlotKira" parent="SlotExpansorKira" instance=ExtResource( 13 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 112.0
margin_bottom = 136.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
slot_size = Vector2( 64, 64 )
images_size = Vector2( 64, 64 )

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="path_table_worker" type="PathFollow2D" parent="Path2D"]
position = Vector2( 1027, 466 )
rotation = -0.946767
rotate = false

[node name="SmallTask" type="Sprite" parent="Path2D/path_table_worker"]
self_modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( -0.129913, -3.60327 )
rotation = 0.945968
scale = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource( 6 )

[node name="path_drawer_table" type="PathFollow2D" parent="Path2D2"]
position = Vector2( 862, 656 )
rotation = -3.03714
rotate = false
cubic_interp = false

[node name="TaskTeste" type="Sprite" parent="Path2D2/path_drawer_table"]
self_modulate = Color( 1, 1, 1, 0.627451 )
position = Vector2( -5.96729, 0.62561 )
rotation = 3.03714
texture = ExtResource( 8 )

[node name="SlotExpansor" parent="." instance=ExtResource( 6 )]
margin_left = 774.937
margin_top = 625.0
margin_right = 1286.94
margin_bottom = 689.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 512, 64 )
rect_clip_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="SlotExpansor"]
margin_left = 4.0
margin_right = 580.0
margin_bottom = 64.0
rect_min_size = Vector2( 576, 64 )
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="root" type="Node2D" parent="SlotExpansor/HBoxContainer"]
visible = false

[node name="SlotExample" parent="SlotExpansor/HBoxContainer/root" instance=ExtResource( 13 )]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
size_flags_horizontal = 5
size_flags_vertical = 5
location = 1
attributes = {
"ART_THINK": 0,
"LOGIC_RAC": 0,
"MANUAL_WORK": 0
}
slot_size = Vector2( 64, 64 )
images_size = Vector2( 64, 64 )

[node name="testeTarefa02" parent="SlotExpansor/HBoxContainer" instance=ExtResource( 13 )]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
uid = "gerivaldo"
qtd = 1
location = 1
slot_size = Vector2( 64, 64 )
images_size = Vector2( 64, 64 )
table_image = ExtResource( 12 )
drawer_image = ExtResource( 8 )
boss_table_image = ExtResource( 11 )

[node name="drawer" type="TileMap" parent="."]
position = Vector2( -634.073, -16 )
scale = Vector2( 1.00787, 1 )
tile_set = SubResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 2621527, 0, 0 )

[node name="testeTarefa9" parent="." instance=ExtResource( 13 )]
margin_left = 776.937
margin_top = 727.0
margin_right = 840.937
margin_bottom = 791.0
mouse_filter = 2
size_flags_horizontal = 5
size_flags_vertical = 5
images_size = Vector2( 64, 64 )

[node name="Cronometer" type="TextureProgress" parent="."]
margin_left = 264.0
margin_top = 208.0
margin_right = 312.0
margin_bottom = 256.0
max_value = 750.0
texture_under = ExtResource( 16 )
texture_progress = ExtResource( 15 )
fill_mode = 4

[node name="Circulo" type="Sprite" parent="."]
position = Vector2( 68, 653 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 19 )

[node name="PhaseProgress" parent="." instance=ExtResource( 18 )]
margin_left = 19.0
margin_top = 598.0
margin_right = 365.0
margin_bottom = 952.0

[connection signal="pressed" from="text_box/next_button" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="text_box/back_button" to="." method="_on_back_button_pressed"]
[connection signal="get_item" from="SlotExpansorKira/WorkSlotKira" to="." method="_on_WorkSlotKira_get_item"]
[connection signal="dropped_item" from="SlotExpansor/HBoxContainer/testeTarefa02" to="." method="_on_testeTarefa02_dropped_item"]
